--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -1,10 +1,15 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    line-height: 1.6;
+    font-size: 18px;
+}
+
+body > div {
+    height: 100%;
 }
 
 * {
