--- a/src/components/styles/authForm.module.css
+++ b/src/components/styles/authForm.module.css
@@ -4,15 +4,17 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    background-color: #FAE0C2;
 }
 
-.registerform {
+.form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    gap: 24px;
     width: 470px;
-    height: 520px;
+    border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     background-color: #EDEDED;
 }
@@ -23,4 +25,5 @@
 
 .link {
     font-size: 14px;
+    margin-bottom: 20px;
 }
