--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     font-size: 18px;
 }
