--- a/src/components/core/Textfield/Textfield.module.css
+++ b/src/components/core/Textfield/Textfield.module.css
@@ -1,24 +1,15 @@
 .textfield {
     display: flex;
     align-items: center;
-    width: 300px;
+    width: 240px;
     padding: 6px;
-    border: 1px solid #CCBEBE;
-    border-radius: 8px;
-    background-color: #ffffff;
-}
-
-.icon {
-    margin-right: 20px;
-}
-
-.inputfield {
-    flex-grow: 1;
-    max-width: 100%;
     border: none;
-    font-size: 16px;
+    color: #df9d3b;
+    font-size: 20px;
+    border-bottom: 1px solid #df9d3b;
+    background-color: #6C5F4F;
 }
 
-.inputfield:focus-visible {
+.textfield:focus-visible {
     outline: none;
 }
