--- a/src/components/styles/authForm.module.css
+++ b/src/components/styles/authForm.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: #FAE0C2;
+    background-color: #6C5F4F;
 }
 
 .form {
@@ -15,12 +15,20 @@
     gap: 24px;
     width: 470px;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    background-color: #EDEDED;
+    /* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
 }
 
-.h1 {
-    margin: 0;
+.buttoncontainer {
+    margin-top: 20px;
+    width: 240px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.icon {
+    filter: invert(89%) sepia(34%) saturate(3294%) hue-rotate(327deg) brightness(90%) contrast(93%);
+    cursor: pointer;
 }
 
 .link {
