--- a/src/components/core/Button/Button.module.css
+++ b/src/components/core/Button/Button.module.css
@@ -1,14 +1,19 @@
 .button {
     width: 160px;
+    height: 50px;
     padding: 6px;
-    border: 1px solid #DF9D3B;
+    border: 1px solid var(--yellow);
     border-radius: 18px;
-    background-color: #6C5F4F;
-    color: #DF9D3B;
+    background-color: var(--brown);
+    color: var(--yellow);
+    font-family: inherit;
     font-size: 24px;
     cursor: pointer;
 }
 
 .button:hover {
-    filter: brightness(90%);
+    border: 1px solid var(--yellow-hover);
+    color: var(--yellow-hover);
+    font-size: 25px;
+    transition: 200ms;
 }
