--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+/* Global variables */
 :root {
     --brown: #6C5F4F;
     --yellow: #DF9D3B;
