--- a/src/components/core/Button/Button.module.css
+++ b/src/components/core/Button/Button.module.css
@@ -4,7 +4,8 @@
     padding: 6px;
     border: 1px solid var(--yellow);
     border-radius: 18px;
-    background-color: var(--brown);
+    /* background-color: var(--brown); */
+    background-color: transparent;
     color: var(--yellow);
     font-family: inherit;
     font-size: 24px;
