--- a/src/components/core/Button/index.module.css
+++ b/src/components/core/Button/index.module.css
@@ -14,6 +14,6 @@
 .button:hover {
     border: 1px solid var(--yellow-hover);
     color: var(--yellow-hover);
-    font-size: 25px;
+    /* font-size: 25px; */
     transition: 200ms;
 }
