--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -2,12 +2,15 @@
 
 /* Global variables */
 :root {
-    --brown: #6C5F4F;
-    --brown-gradient: linear-gradient(60deg, rgba(54,49,44,1) 0%, rgba(97,64,34,1) 100%);
+    /* Colors */
+    --brown: #463728;
     --yellow: #DF9D3B;
     --yellow-hover: #DBAD68;
     --yellow-svg: invert(89%) sepia(34%) saturate(3294%) hue-rotate(327deg) brightness(90%) contrast(93%);
     --yellow-svg-hover: invert(76%) sepia(59%) saturate(395%) hue-rotate(339deg) brightness(89%) contrast(93%);
+
+    /* Misc */
+    --default-border-radius: 10px;
 }
 
 html,
@@ -15,8 +18,7 @@ body {
     margin: 0;
     height: 100%;
     padding: 0;
-    /* background-color: var(--brown); */
-    background: var(--brown-gradient);
+    background-color: var(--brown);
     color: var(--yellow);
     font-size: 18px;
     line-height: 1.6;
