--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -4,12 +4,12 @@
     width: 100%;
     max-width: 800px;
     border: 2px solid var(--yellow);
-    border-radius: 24px;
+    border-radius: var(--default-border-radius);
 }
 
 .avatar {
     border: 1px solid var(--yellow);
-    border-radius: 24px;
+    border-radius: 50%;
 }
 
 .header {
