--- a/src/components/UserProfile/Header/index.module.css
+++ b/src/components/UserProfile/Header/index.module.css
@@ -5,12 +5,12 @@
     max-width: 800px;
     padding: 20px;
     border: 2px solid var(--yellow);
-    border-radius: 24px;
+    border-radius: var(--default-border-radius);
 }
 
 .avatar {
     border: 1px solid var(--yellow);
-    border-radius: 24px;
+    border-radius: 50%;
 }
 
 .nameContainer {
