--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -14,7 +14,7 @@
     height: 60px;
     padding: 15px;
     border: 2px solid var(--yellow);
-    border-radius: 24px;
+    border-radius: var(--default-border-radius);
     background-color: transparent;
     font-size: 18px;
     color: var(--yellow);
@@ -42,7 +42,7 @@
     height: 60px;
     padding: 6px;
     border: none;
-    border-radius: 18px;
+    border-radius: var(--default-border-radius);
     background-color: var(--yellow);
     color: white;
     font-family: inherit;
