--- a/src/components/styles/authForm.module.css
+++ b/src/components/styles/authForm.module.css
@@ -13,7 +13,7 @@
     align-items: center;
     gap: 8px;
     width: 300px;
-    border-radius: 10px;
+    border-radius: var(--default-border-radius);
 }
 
 .buttonContainer {
