--- a/src/components/UserProfile/Header/index.module.css
+++ b/src/components/UserProfile/Header/index.module.css
@@ -1,6 +1,8 @@
 .header {
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
     width: 100%;
     max-width: 800px;
     padding: 20px;
@@ -16,6 +18,7 @@
 .nameContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     color: white;
 }
 
@@ -25,4 +28,16 @@
 
 .username {
     font-size: 18px;
+}
+
+.statsContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 40px;
+    color: var(--grey);
+}
+
+.postsCount, .joinedDate {
+    color: white;
 }
