--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -4,7 +4,9 @@
 :root {
     /* Colors */
     --brown: #463728;
+    --grey: #958A8A;
     --yellow: #DF9D3B;
+    --red: #cf460c;
     --yellow-hover: #DBAD68;
     --yellow-svg: invert(89%) sepia(34%) saturate(3294%) hue-rotate(327deg) brightness(90%) contrast(93%);
     --yellow-svg-hover: invert(76%) sepia(59%) saturate(395%) hue-rotate(339deg) brightness(89%) contrast(93%);
