--- a/src/components/core/CurrentUser/index.module.css
+++ b/src/components/core/CurrentUser/index.module.css
@@ -2,9 +2,14 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 10px 10px;
+    padding: 0 10px;
     border-radius: var(--default-border-radius);
     background-color: var(--yellow);
-    color: white;
+    font-size: 16px;
+    color: var(--brown);
     cursor: pointer;
+}
+
+.icon {
+    filter: var(--brown-svg);
 }
