--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -10,6 +10,7 @@
     --yellow-hover: #DBAD68;
     --yellow-svg: invert(89%) sepia(34%) saturate(3294%) hue-rotate(327deg) brightness(90%) contrast(93%);
     --yellow-svg-hover: invert(76%) sepia(59%) saturate(395%) hue-rotate(339deg) brightness(89%) contrast(93%);
+    --brown-svg: invert(18%) sepia(29%) saturate(632%) hue-rotate(349deg) brightness(95%) contrast(87%);
 
     /* Misc */
     --default-border-radius: 10px;
