--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -66,3 +66,9 @@
 .trash:hover {
     filter: var(--yellow-svg-hover);
 }
+
+@media only screen and (max-width: 1100px) {
+    .postContainer {
+        max-width: 1100px;
+    }
+}
