--- a/src/components/UserProfile/Header/index.module.css
+++ b/src/components/UserProfile/Header/index.module.css
@@ -41,3 +41,9 @@
 .postsCount, .joinedDate {
     color: white;
 }
+
+@media only screen and (max-width: 1100px) {
+    .header {
+        max-width: 1100px;
+    }
+}
