--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -1,16 +1,18 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 800px;
+    max-width: 800px;
+    width: 100%;
 }
 
 .inputContainer {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .textarea {
-    width: 600px;
+    width: 80%;
     height: 60px;
     padding: 15px;
     border: 2px solid var(--yellow);
@@ -53,4 +55,25 @@
 .button:hover {
     background-color: var(--yellow-hover);
     transition: 200ms;
+}
+
+@media only screen and (max-width: 1100px) {
+    .container {
+        max-width: 1100px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .textarea {
+        width: 100%;
+        height: 120px;
+    }
+
+    .button {
+        width: 100%;
+    }
 }
