--- a/src/components/core/HomeButton/index.module.css
+++ b/src/components/core/HomeButton/index.module.css
@@ -1,16 +1,24 @@
-.logo {
-    border-radius: 50%;
-    border: 1px solid var(--yellow);
+.button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 0 10px;
+    border-radius: var(--default-border-radius);
+    background-color: var(--yellow);
+    font-size: 16px;
+    color: var(--brown);
+    cursor: pointer;
     position: fixed;
     left: 10px;
     top: 10px;
-    cursor: pointer;
 }
 
-.logo:hover {
-    border: 1px solid var(--yellow-hover);
+.button:hover {
+    background-color: var(--yellow-hover);
 }
 
 @media only screen and (max-width: 1100px) {
-    
+    .button {
+        height: 30px;
+    }
 }
