--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -1,25 +1,31 @@
 .container {
     display: flex;
-    justify-content: space-between;
-    max-width: 800px;
+    flex-direction: column;
     width: 100%;
+    border-left: 1rem solid var(--purple-400);
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: var(--grey-200);
+}
+
+.prompt {
+    margin: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 .inputContainer {
-    display: flex;
-    flex-direction: column;
     width: 100%;
+    padding: 0 2rem;
 }
 
 .textarea {
-    width: 80%;
-    height: 60px;
-    padding: 15px;
-    border: 1px solid var(--yellow);
-    border-radius: var(--default-border-radius);
-    background-color: transparent;
-    font-size: 18px;
-    color: var(--yellow);
+    width: 100%;
+    height: 8rem;
+    padding: 0.7rem;
+    border: none;
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-size: 1.3rem;
     outline: none;
     resize: none;
 }
@@ -28,34 +34,36 @@
     display: none;
 }
 
-.textarea::placeholder {
-    color: var(--grey);
-}
-
 .error {
-    height: 20px;
-    margin-left: 16px;
+    height: 1rem;
     color: var(--red);
-    font-size: 13px;
+    font-size: 0.8rem;
 }
 
 .button {
-    width: 160px;
-    height: 60px;
-    padding: 6px;
+    width: 8rem;
+    height: 2rem;
+    margin: 1rem 2rem;
+    margin-left: auto;
     border: none;
-    border-radius: var(--default-border-radius);
-    background-color: var(--yellow);
+    border-radius: 4px;
+    background-color: var(--purple-500);
     color: white;
     font-family: inherit;
-    font-size: 24px;
+    font-size: 1.3rem;
     cursor: pointer;
+    transition: 0.25s;
 }
 
-.button:hover {
-    background-color: var(--yellow-hover);
-    transition: 200ms;
+.button:hover,
+.button:focus {
+    box-shadow: 
+        0px 4px 4px rgba(0, 0, 0, 0.25),
+        inset -4rem 0 0 0 var(--purple-700),
+        inset 4rem 0 0 0 var(--purple-700);  
 }
+
+/* 
 
 @media only screen and (max-width: 1100px) {
     .container {
@@ -76,4 +84,4 @@
     .button {
         width: 100%;
     }
-}
+} */
