--- a/src/components/core/Button/index.module.css
+++ b/src/components/core/Button/index.module.css
@@ -1,5 +1,6 @@
 .button {
-    width: 14rem;
+    width: 16rem;
+    max-width: 16rem;
     height: 2rem;
     border: none;
     border-radius: 10px;
@@ -20,7 +21,7 @@
 .primary:focus {
     box-shadow: 
         0px 4px 4px rgba(0, 0, 0, 0.25),
-        inset -7rem 0 0 0 var(--purple-700),
-        inset 7rem 0 0 0 var(--purple-700);  
+        inset -8rem 0 0 0 var(--purple-700),
+        inset 8rem 0 0 0 var(--purple-700);  
 }
 
