--- a/src/components/core/Textfield/index.module.css
+++ b/src/components/core/Textfield/index.module.css
@@ -1,10 +1,11 @@
 .textfieldContainer {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .textfield {
-    width: 14rem;
+    width: 100%;
     height: 2rem;
     padding: 1rem;
     border: none;
@@ -27,6 +28,6 @@
 
 .error {
     height: 20px;
-    color: var(--red);
+    color: darkred;
     font-size: 13px;
 }
