--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -51,9 +51,17 @@
     margin: 1rem 2rem;
 }
 
-/*
-@media only screen and (max-width: 1100px) {
-    .postContainer {
-        max-width: 1100px;
+
+@media only screen and (max-width: 800px) {
+    .header {
+        margin: 0.5rem;
     }
-} */
+
+    .text {
+        margin: 0.5rem;
+    }
+
+    .date {
+        font-size: 0.7rem;
+    }
+}
