--- a/src/components/UserProfile/Profile/index.module.css
+++ b/src/components/UserProfile/Profile/index.module.css
@@ -47,8 +47,17 @@
     color: var(--purple-600);
 }
 
-/* @media only screen and (max-width: 1100px) {
-    .header {
-        max-width: 1100px;
+@media only screen and (max-width: 1400px) {
+    .profile {
+        width: 80%;
+        justify-content: center;
+        margin: 0;
+        margin-top: 2rem;
     }
-} */
+}
+
+@media only screen and (max-width: 800px) {
+    .profile {
+        width: 100%;
+    }
+}
