--- a/src/components/core/Logo/index.module.css
+++ b/src/components/core/Logo/index.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 15rem;
     height: 15rem;
-    border-radius: 50%;
+    border-radius: 20%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: var(--grey-200);
     font-family: 'Space Grotesk', sans-serif;
@@ -25,4 +25,11 @@
 
 .logoTextSub {
     align-self: flex-end;
+}
+
+@media only screen and (max-width: 800px) {
+    .logoContainer {
+        width: 12rem;
+        height: 12rem;
+    }
 }
