--- a/src/components/styles/authForm.module.css
+++ b/src/components/styles/authForm.module.css
@@ -12,7 +12,7 @@
     width: 50rem;
     height: 40rem;
     border-radius: 10px;
-    background-color: var(--purple-100);
+    background-color: var(--grey-100);
 }
 
 .logo {
@@ -73,6 +73,7 @@
     .form {
         width: 100%;
         height: 100%;
+        border-radius: 0;
     }
 
     .logo {
