--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -53,6 +53,11 @@
 
 
 @media only screen and (max-width: 800px) {
+
+    .postContainer {
+        border-radius: 0;
+    }
+
     .header {
         margin: 0.5rem;
     }
