--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -62,3 +62,9 @@
         inset -4rem 0 0 0 var(--purple-700),
         inset 4rem 0 0 0 var(--purple-700);  
 }
+
+@media only screen and (max-width: 800px) {
+    .container {
+        border-radius: 0;
+    }
+}
