--- a/src/components/UserProfile/Profile/index.module.css
+++ b/src/components/UserProfile/Profile/index.module.css
@@ -47,6 +47,13 @@
     color: var(--purple-600);
 }
 
+@media only screen and (min-width: 1400px) {
+    .profile {
+        position: sticky;
+        top: 2rem;
+    }
+}
+
 @media only screen and (max-width: 1400px) {
     .profile {
         width: 80%;
