--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -21,13 +21,18 @@
 
 .textarea {
     width: 100%;
-    height: 8rem;
+    height: 3rem;
     padding: 0.7rem;
     border: none;
     box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
     font-size: 1.3rem;
     outline: none;
     resize: none;
+    transition: 0.5s;
+}
+
+.textarea:focus {
+    height: 8rem;
 }
 
 .textarea::-webkit-scrollbar {
