--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -6,6 +6,11 @@
     border-left: 1rem solid var(--purple-400);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: var(--grey-200);
+    transition: 0.5s;
+}
+
+.postContainer:hover {
+    border-left: 1rem solid var(--purple-500);
 }
 
 .avatar {
