--- a/src/components/UserProfile/Profile/index.module.css
+++ b/src/components/UserProfile/Profile/index.module.css
@@ -9,6 +9,11 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: var(--grey-200);
+    transition: 0.5s;
+}
+
+.profile:hover {
+    border-top: 1rem solid var(--purple-500);
 }
 
 .avatar {
