--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -6,6 +6,11 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: var(--grey-200);
+    transition: 0.5s;
+}
+
+.container:hover {
+    border-left: 1rem solid var(--purple-500);
 }
 
 .prompt {
