--- a/src/components/core/PostInput/index.module.css
+++ b/src/components/core/PostInput/index.module.css
@@ -26,7 +26,7 @@
 
 .textarea {
     width: 100%;
-    height: 3rem;
+    height: 8rem;
     padding: 0.7rem;
     border: none;
     box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -36,9 +36,9 @@
     transition: 0.5s;
 }
 
-.textarea:focus {
+/* .textarea:focus {
     height: 8rem;
-}
+} */
 
 .textarea::-webkit-scrollbar {
     display: none;
